--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "http://20mathmarques.github.io/LayoutM",
   "name": "layout",
   "version": "0.1.0",
-  "homepage": "https://20mathmarques.github.io/LayoutM/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+ 
   },
   "eslintConfig": {
     "extends": [
